2012-08-06  Stipe Tolj  <stolj at kannel.org>
    * test/test_hash.c: simple test program replacing test_md5.c which
      computes both, MD5 hash digest and a SHA1 hash digest if openssl has
      been available.
      
2012-08-06  Stipe Tolj  <stolj at kannel.org>
    * test/test_dict.c: add a lookup phase too, in order to have a populate
      and lookup phase while testing.
    
2012-07-17 Alexander Malysh <amalysh at kannel.org>
    * README: applied patch that corrects docs build on current debian.
      Thanks to Martin Atukunda <matlads at gmail.com> for this patch.

2012-07-04  Stipe Tolj  <stolj at kannel.org>
    * doc/CodingStyle: fix type for --pad-oper option. NLC.
     
2012-06-02  Stipe Tolj  <stolj at kannel.org>
    * gwlib/http.c: fix possible problems for HTTP/1.1 "Host" header value. We
      need to remove the port in both cases that contain the standard port
      values, port 80 for non-SSL and port 443 for SSL-enabled connections.
    
2012-05-31 Alexander Malysh <amalysh at kannel.org>
    * doc/userguide/userguide.xml: removed meta-data from smsc group because it
      is not supported there.

2012-05-23 Alexander Malysh <amalysh at kannel.org>
    * gw/smsc/smsc_smpp.c: added workaround for deferred=0.

2012-05-16 Andreas Fink <andreas at fink.org>
    * gw/smsc_at.c gw/smsc_at.h gwlib/cfg.def: implemented ability to disable
    hardware flow control from the computer side due to some broken modems
    who not simply ignore hardware flow control but actually wire it in the
    way that if its enabled, flow is always disabled. You can now
    say hardware-flow-control = 0 in the modem definition to let the computer
    ignore that fake signal. Note this is not the same as enable-hwhs which is the
    AT command to tell the modem to actually use flow control. hardware-flow-control
    is the hardware flow control for the computer side.

2012-04-20 Alexander Malysh <amalysh at kannel.org>